--- a/templates/hipchat.yaml.erb
+++ b/templates/hipchat.yaml.erb
@@ -2,7 +2,7 @@
 :hipchat_api: '<%= scope.lookupvar('puppet_hipchat::api_key') %>'
 :hipchat_room: '<%= scope.lookupvar('puppet_hipchat::room') %>'
 :hipchat_notify_color: '<%= scope.lookupvar('puppet_hipchat::notify_color') %>'
-:hipchat_notify: '<%= scope.lookupvar('puppet_hipchat::notify_room') %>'
+:hipchat_notify: <%= scope.lookupvar('puppet_hipchat::notify_room') %>
 :hipchat_statuses:
 <% scope.lookupvar('puppet_hipchat::statuses').each do |status| -%>
   - <%= status %>
