Adding support for Puppetboard URLs.
  This commit will add the ability to send Puppetboard URLs to your
  hipchat channel.

--- a/templates/hipchat.yaml.erb
+++ b/templates/hipchat.yaml.erb
@@ -7,3 +7,4 @@
 <% scope.lookupvar('puppet_hipchat::statuses').each do |status| -%>
   - <%= status %>
 <% end -%>
+:hipchat_puppetboard: <%= scope.lookupvar('puppet_hipchat::puppetboard') %>
