Add support for the Puppet Dashboard
This work adds support for the Puppet Dashboard, which as of this
writing is used by Puppet Enterprise.

--- a/templates/hipchat.yaml.erb
+++ b/templates/hipchat.yaml.erb
@@ -8,3 +8,4 @@
   - <%= status %>
 <% end -%>
 :hipchat_puppetboard: <%= scope.lookupvar('puppet_hipchat::puppetboard') %>
+:hipchat_dashboard: <%= scope.lookupvar('puppet_hipchat::dashboard') %>
