Adding feature to specify a custom hipchat server

--- a/templates/hipchat.yaml.erb
+++ b/templates/hipchat.yaml.erb
@@ -1,5 +1,6 @@
 ---
 :hipchat_api: '<%= @api_key %>'
+:hipchat_server: '<%= @server %>'
 :hipchat_room: '<%= @room %>'
 :hipchat_notify_color: '<%= @notify_color %>'
 :hipchat_notify: <%= @notify_room %>
