General code quality improvements
Changes made
1: force stringified booleans to be real booleans

2: hipchat gem fails back to using environmental variable for proxy config,
given the error logging we need to fall back as well

3: hipchat pivots proxy on if defined, passing nil is an accpetable, as such no
if statement is required so long as real boolean is passed (requires #1)

4: added management of proxy settings into module

5: added spec tests for puppetboard and dashboard settings in config
file

6: rather than setting strings to false, they should be not written to
the config file at all. Implemented

7: since #1 destringed booleans, removed checks for 'false'

8: none of the valid values in the yaml config file would receive
special meaning, removing quotes

--- a/templates/hipchat.yaml.erb
+++ b/templates/hipchat.yaml.erb
@@ -1,13 +1,20 @@
 ---
-:hipchat_api: '<%= @api_key %>'
-:hipchat_server: '<%= @server %>'
-:hipchat_room: '<%= @room %>'
-:hipchat_notify_color: '<%= @notify_color %>'
-:hipchat_notify: '<%= @notify_room %>'
-:hipchat_api_version: '<%= @api_version %>'
+:hipchat_api: <%= @api_key %>
+:hipchat_server: <%= @server %>
+:hipchat_room: <%= @room %>
+:hipchat_notify_color: <%= @notify_color %>
+:hipchat_notify: <%= @notify_room %>
+:hipchat_api_version: <%= @api_version %>
 :hipchat_statuses:
 <% @statuses.each do |status| -%>
   - <%= status %>
 <% end -%>
+<% if @puppetboard -%>
 :hipchat_puppetboard: <%= @puppetboard %>
+<% end -%>
+<% if @dashboard -%>
 :hipchat_dashboard: <%= @dashboard %>
+<% end -%>
+<% if @proxy -%>
+:hipchat_proxy: <%= @proxy %>
+<% end -%>
